2023-08-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-2855.c: disable for MacOS host test
	* support/regression/tests/charconst.c,
	  support/regression/tests/string.c,
	  support/regression/tests/wchar.c.in: work around missing uchar.h
	  on MacOS host test

2023-08-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: Remove unused/unbuilt simulators

2023-08-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/ds390/gen.c,
	  src/ds390/ralloc.c,
	  src/hc08/gen.c,
	  src/mcs51/gen.c,
	  src/mcs51/ralloc.c,
	  src/pdk/gen.c,
	  src/z80/gen.c:
	  Fix various bugs found by sanitizers.

2023-08-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCpeeph.c,
	  src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c:
	  Fix various bugs found by sanitizers.

2023-07-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/pdk/ralloc.c:
	  Fix some issues, mostly in generalized constant propagation.

2023-07-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCcse.c,
	  src/SDCCcse.h,
	  src/SDCCopt.c,
	  support/regression/tests/bug-3636.c:
	  Fix bug #3626.
	* src/SDCCsymt.c,
	  support/regression/tests/bug-3597.c:
	  Fix bug #3597.
	* src/SDCCast.c,
	  support/valdiag/tests/bug-2240.c:
	  Fix bug #2240.

2023-07-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/mbrtowc.c,
	  support/regression/tests/wchar.c.in:
	  Fix an issue in the return value of mbrtowc for 0 character (it indirectly also affected mbrtoc16 and mbrtoc32).

2023-07-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix bug #3619.

2023-07-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib:
	  Spelling fixes, patch #465 by Konstantin Kim.

2023-07-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* _gptrget.c,
	* _gptrgetc.c,
	* _gptrput.c: applied patch #464, Thanks Konstantin Kim