@@ -9,17 +9,12 @@
 #include <stddef.h> // For wchar_t
 
 #if defined(__SDCC) || defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L
-#if defined(__APPLE__)
-// Work around Apple's missing uchar.h
-#include <stdint.h>
-typedef int_least16_t char16_t;
-typedef int_least32_t char32_t;
-#else
+#if !defined(__APPLE__)
 #include <uchar.h> // For char16_t, char32_t
-#endif
+
 char16_t uc = u'c';
 char32_t Uc = U'c';
-
+#endif
 #endif
 
 char c = 'c';
@@ -31,8 +26,10 @@ testCharConst(void)
 #if defined(__SDCC) || defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L
   ASSERT (_Generic('c', default: 1, int: 0) == 0);
   ASSERT (_Generic(L'c', default: 1, wchar_t: 0) == 0);
+#if !defined(__APPLE__)
   ASSERT (_Generic(u'c', default: 1, char16_t: 0) == 0);
   ASSERT (_Generic(U'c', default: 1, char32_t: 0) == 0);
+#endif
 #endif
 }
 
